# CMakeList.txt : CMake project for chapter1_10, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("chapter1_10")

# Add source to this project's executable.
add_executable (chapter1_10 "main.cpp" )

# TODO: Add tests and install targets if needed.
