# CMakeList.txt : CMake project for chapter1_13, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("chapter1_13")

# Add source to this project's executable.
add_executable (chapter1_13 "main.cpp")

# TODO: Add tests and install targets if needed.
