# CMakeList.txt : CMake project for chapter2_8, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("chapter2_8")

# Add source to this project's executable.
add_executable (chapter2_8 "main.cpp")

# TODO: Add tests and install targets if needed.
